added base design and player section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,56 @@
     <title>Leader Board</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <!-- header start -->
+    <header>
+
+    </header>
+    <!-- header end -->
+
+
+
+    <!-- main start  -->
+    <main>
+        <!-- top players and top blog  -->
+        <section class="container">
+            
+            <div class="top-players">
+                <h2 class="section-title">Top players</h2>
+                 <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name">topplayer-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name">topplayer-2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name">topplayer-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name">topplayer-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name">topplayer-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">topplayer-6</h3>
+                    </div>
+                 </div>
+            </div>
+        </section>
+
+
+    </main>
+    <!-- main end -->
     
 </body>
 </html>
